// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exclude #2 1`] = `
[
  "already.gz",
  "image.png",
  "index.html",
  "index.html.br",
  "index.html.gz",
]
`;

exports[`exclude #3 1`] = `
[
  "already.gz",
  "image.png",
  "image.png.br",
  "image.png.gz",
  "index.html",
]
`;

exports[`exclude #4 1`] = `
[
  "already.gz",
  "image.png",
  "image.png.br",
  "image.png.gz",
  "index.html",
  "index.html.br",
  "index.html.gz",
]
`;

exports[`exclude 1`] = `
[
  "already.gz",
  "image.png",
  "index.html",
  "index.html.br",
  "index.html.gz",
]
`;

exports[`include #2 1`] = `
[
  "already.gz",
  "image.png",
  "index.html",
  "index.html.br",
  "index.html.gz",
]
`;

exports[`include 1`] = `
[
  "already.gz",
  "image.png",
  "index.html",
  "index.html.br",
  "index.html.gz",
]
`;

exports[`mtime 1`] = `
[
  "already.gz",
  "image.png",
  "image.png.br",
  "image.png.gz",
  "index.html",
  "index.html.br",
  "index.html.gz",
]
`;

exports[`outdir 1`] = `
[
  "already.gz",
  "dist",
  "dist/image.png.br",
  "dist/image.png.gz",
  "dist/index.html.br",
  "dist/index.html.gz",
  "image.png",
  "index.html",
]
`;

exports[`simple 1`] = `
[
  "already.gz",
  "image.png",
  "image.png.br",
  "image.png.gz",
  "index.html",
  "index.html.br",
  "index.html.gz",
]
`;
